@@ -1,8 +1,9 @@
 /checkinput
 /checktestdata
-/yylex.cc
+/lex.cc
 /parse.cc
 /parserbase.h
+/scannerbase.h
 /runssh_judgehosts
 /runssh_teams
 /save_sources2file
