@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V2.4.2 on Sun Mar 22 22:57:14 2009 +0100
+// Generated by Bisonc++ V4.01.00 on Sat, 17 Aug 2013 12:52:37 +0100
 
 #ifndef Parser_h_included
 #define Parser_h_included
@@ -8,7 +8,6 @@
 // $insert scanner.h
 #include "scanner.h"
 
-#include "parsetype.h"
 
 #undef Parser
 class Parser: public ParserBase
@@ -17,9 +16,8 @@ class Parser: public ParserBase
     Scanner d_scanner;
 
     public:
-        Parser(): d_scanner(&d_loc__, &d_val__) {}
-        Parser(std::istream& in): d_scanner(&d_loc__, &d_val__,&in) {}
-
+        Parser(): d_scanner() {}
+        Parser(std::istream& in): d_scanner(in) {}
         int parse();
 
     private:
@@ -27,30 +25,13 @@ class Parser: public ParserBase
         int lex();                      // returns the next token from the
                                         // lexical scanner.
         void print();                   // use, e.g., d_token, d_loc
-        void print__();
 
     // support functions for parse():
         void executeAction(int ruleNr);
         void errorRecovery();
         int lookup(bool recovery);
         void nextToken();
+        void print__();
 };
-
-inline void Parser::error(char const *msg)
-{
-    std::cerr << msg << " on line " << d_scanner.lineno() << std::endl;
-}
-
-// $insert lex
-inline int Parser::lex()
-{
-	int res = d_scanner.yylex();
-	d_val__ = STYPE__(d_scanner.YYText());
-	return res;
-}
-
-inline void Parser::print()      // use d_token, d_loc
-{}
-
 
 #endif
