@@ -1,16 +1,37 @@
-// Generated by Bisonc++ V2.7.0 on Mon, 23 Jan 2012 10:54:22 +0100
+// Generated by Bisonc++ V4.01.00 on Sat, 17 Aug 2013 12:52:37 +0100
 
     // Include this file in the sources of the class Parser.
 
 // $insert class.h
 #include "parser.h"
 
-    // Add below here any includes etc. that are only 
-    // required for the compilation of Parser's sources.
+
+inline void Parser::error(char const *msg)
+{
+    std::cerr << msg << " on line " << d_scanner.lineNr() << std::endl;
+}
+
+// $insert lex
+inline int Parser::lex()
+{
+	int res = d_scanner.lex();
+	d_val__ = STYPE__(d_scanner.matched());
+	return res;
+}
+
+inline void Parser::print()
+{
+    print__();           // displays tokens if --print was specified
+}
+
+
+    // Add here includes that are only required for the compilation
+    // of Parser's sources.
 
 
 
     // UN-comment the next using-declaration if you want to use
-    // symbols from the namespace std without specifying std::
-//using namespace std;
+    // int Parser's sources symbols from the namespace std without
+    // specifying std::
 
+//using namespace std;
