@@ -1,27 +1,72 @@
-#ifndef _SCANNER_H_
-#define _SCANNER_H_
+// Generated by Flexc++ V0.98.00 on Sun, 06 Oct 2013 22:49:41 +0100
 
-#if ! defined(_SKIP_YYFLEXLEXER_) && ! defined(_SYSINC_FLEXLEXER_H_)
-#include <FlexLexer.h>
-#define _SYSINC_FLEXLEXER_H_
-#endif
+#ifndef Scanner_H_INCLUDED_
+#define Scanner_H_INCLUDED_
 
-#include <stdio.h>
-#include "parserbase.h"
+// $insert baseclass_h
+#include "scannerbase.h"
 
-class Scanner: public yyFlexLexer
-{
-	Parser::LTYPE__ *d_loc;
-	Parser::STYPE__ *d_val;
+#include <string>
+#include <exception>
 
-	public:
-		Scanner(Parser::LTYPE__ *loc, Parser::STYPE__ *val,
-		        std::istream* yyin  = 0,
-		        std::ostream* yyout = 0)
-		    : yyFlexLexer(yyin,yyout), d_loc(loc), d_val(val)
-        {}
+class ScannerException: public std::exception {
+  private:
+	std::string msg;
 
-        int yylex();
+  public:
+	ScannerException(): msg("unknown error") {}
+	ScannerException(std::string msg_): msg("scanner: "+msg_) {}
+	const char *what() const throw() { return msg.c_str(); }
 };
 
-#endif
+// $insert classHead
+class Scanner: public ScannerBase
+{
+    public:
+        explicit Scanner(std::istream &in = std::cin,
+                         std::ostream &out = std::cout);
+
+        Scanner(std::string const &infile, std::string const &outfile);
+
+        // $insert lexFunctionDecl
+        int lex();
+
+    private:
+        int lex__();
+        int executeAction__(size_t ruleNr);
+
+        void print();
+        void preCode();     // re-implement this function for code that must
+                            // be exec'ed before the patternmatching starts
+};
+
+// $insert scannerConstructors
+inline Scanner::Scanner(std::istream &in, std::ostream &out)
+:
+    ScannerBase(in, out)
+{}
+
+inline Scanner::Scanner(std::string const &infile, std::string const &outfile)
+:
+    ScannerBase(infile, outfile)
+{}
+
+// $insert inlineLexFunction
+inline int Scanner::lex()
+{
+    return lex__();
+}
+
+inline void Scanner::preCode()
+{
+    // optionally replace by your own code
+}
+
+inline void Scanner::print()
+{
+    print__();
+}
+
+
+#endif // Scanner_H_INCLUDED_
+
