@@ -1,0 +1,6 @@
+// Generated by Flexc++ V0.98.00 on Sun, 06 Oct 2013 15:16:47 +0100
+
+// $insert class_h
+#include "scanner.h"
+
+#include "parser.h"
